--- a/cjy/index.html
+++ b/cjy/index.html
@@ -388,6 +388,7 @@
             }));
 
             var runAsync = eval(Jscex.compile("async", function () {
+                $await(seedAnimate());
                 $await(growAnimate());
                 $await(flowAnimate());
                 $await(moveAnimate());
